@@ -47,6 +47,93 @@
 
 /****************************************************************************/
 
+/* Directories being scanned whose locks need to be freed when shutting down. */
+struct MinList NOCOMMON __directory_list;
+
+/****************************************************************************/
+
+#if defined(__THREAD_SAFE)
+
+/****************************************************************************/
+
+static struct SignalSemaphore * dirent_lock;
+
+/****************************************************************************/
+
+void
+__dirent_lock(void)
+{
+	if(dirent_lock != NULL)
+		ObtainSemaphore(dirent_lock);
+}
+
+/****************************************************************************/
+
+void
+__dirent_unlock(void)
+{
+	if(dirent_lock != NULL)
+		ReleaseSemaphore(dirent_lock);
+}
+
+/****************************************************************************/
+
+#endif /* __THREAD_SAFE */
+
+/****************************************************************************/
+
+CLIB_CONSTRUCTOR(__dirent_init)
+{
+	BOOL success = FALSE;
+
+	ENTER();
+
+	NewList((struct List *)&__directory_list);
+
+	#if defined(__THREAD_SAFE)
+	{
+		dirent_lock = __create_semaphore();
+		if(dirent_lock == NULL)
+			goto out;
+	}
+	#endif /* __THREAD_SAFE */
+
+	success = TRUE;
+
+ out:
+
+	RETURN(success);
+
+	if(success)
+		CONSTRUCTOR_SUCCEED();
+	else
+		CONSTRUCTOR_FAIL();
+}
+
+/****************************************************************************/
+
+CLIB_DESTRUCTOR(__dirent_exit)
+{
+	ENTER();
+
+	if(__directory_list.mlh_Head != NULL)
+	{
+		while(NOT IsListEmpty((struct List *)&__directory_list))
+			closedir((DIR *)__directory_list.mlh_Head);
+	}
+
+	#if defined(__THREAD_SAFE)
+	{
+		__delete_semaphore(dirent_lock);
+		dirent_lock = NULL;
+	}
+	#endif /* __THREAD_SAFE */
+
+	LEAVE();
+}
+
+/****************************************************************************/
+
 int
 closedir(DIR * directory_pointer)
 {
