@@ -78,6 +78,20 @@ struct DaemonMessage
 
 /****************************************************************************/
 
+struct Library * __SocketBase;
+
+/****************************************************************************/
+
+#if defined(__amigaos4__)
+struct SocketIFace *__ISocket;
+#endif /* __amigaos4__ */
+
+/****************************************************************************/
+
+int h_errno;
+
+/****************************************************************************/
+
 CLIB_DESTRUCTOR(__socket_exit)
 {
 	ENTER();
