@@ -43,6 +43,12 @@
 
 /****************************************************************************/
 
+/* The file handle table. */
+struct iob **	__iob;
+int				__num_iob;
+
+/****************************************************************************/
+
 int
 __grow_iob_table(int max_iob)
 {
